<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".MainActivity"> <androidx.appcompat.widget.Toolbar
    android:id="@+id/barraHerramientas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    app:titleTextColor="@android:color/white"
    app:title="@string/app_name"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/celeste_francia"/>

    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/movementsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movimientos"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hitsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aciertos"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/remainingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcos_restantes"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textNombreJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/nombre"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/txtContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Iniciando..."
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/boardGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:alignmentMode="alignMargins"
        android:columnCount="6"
        android:rowCount="6"
        android:useDefaultMargins="true"
        android:background="#DDDDDD"/>
</LinearLayout>